--- a/models/staging/_src_jaffle_shop.yml
+++ b/models/staging/_src_jaffle_shop.yml
@@ -9,6 +9,11 @@ sources:
 
     tables:
       - name: customers
+        columns:
+          - name: "id"
+            tests:
+              - unique
+              - not_null
       - name: orders
         config:
           freshness:
