--- a/models/staging/_stg_jaffle_shop.yml
+++ b/models/staging/_stg_jaffle_shop.yml
@@ -16,6 +16,7 @@ models:
           - not_null
         
       - name: status
+        description: '{{ doc("order_status") }}'
         tests:
           - accepted_values:
               arguments:
